--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,20 @@
     <artifactId>CucumberBasics</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-         <maven.compiler.source>1.6</maven.compiler.source>
-         <maven.compiler.target>1.6</maven.compiler.target>
+         <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version><!-- Use the version that matches your project -->
+            <configuration>
+                <source>1.8</source><!-- Update to the Java version you want to use -->
+                <target>1.8</target><!-- Update to the Java version you want to use -->
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
     </properties>
     <dependencies>
 
